--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Apr 19 12:02:01 COT 2021
-sdk.dir = C\:\\Users\\WINDOWS 10\\AppData\\Local\\Android\\SDK
+sdk.dir = C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+ 
