Commit que contiente el BottomNavigation y funcionalidad de la app generada en la practica 2

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 19 12:02:01 COT 2021
-sdk.dir = C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
- 
+#Tue May 04 21:20:24 COT 2021
+sdk.dir=C\:\\Users\\WINDOWS 10\\AppData\\Local\\Android\\Sdk
